@@ -1,43 +1,48 @@
 package cn.daogecmd.emojink.command;
 
 import cn.daogecmd.emojink.api.EmojiAPI;
+import cn.nukkit.Player;
 import cn.nukkit.command.Command;
 import cn.nukkit.command.CommandSender;
 import cn.nukkit.form.element.ElementButton;
+import cn.nukkit.form.response.FormResponseSimple;
 import cn.nukkit.form.window.FormWindowSimple;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class EmojiCommand extends Command {
     public EmojiCommand() {
-        super("emoji", "send emoji!");
+        super("emoji", "Send emoji");
         this.setAliases(new String[]{"emj", "ej"});
     }
 
     @Override
     public boolean execute(CommandSender sender, String commandLabel, String[] args) {
-        if (!sender.isPlayer()) {
+        if (!(sender instanceof Player)) {
             return false;
         }
         //send form
-        var buttons = EmojiAPI.getAPI()
+        List<ElementButton> buttons = EmojiAPI.getAPI()
                 .getEmojiList()
                 .entrySet()
                 .stream()
                 .map(entry -> {
-                    var builder = new StringBuilder("§f");
-                    builder.append(entry.getValue());
-                    builder.append("§8\n");
-                    builder.append(entry.getKey());
-                    var text = builder.toString();
+                    String text = "§9" + entry.getValue() +
+                            "§8\n" +
+                            entry.getKey();
                     return new ElementButton(text);
-                }).toList();
-        var form = new FormWindowSimple("§fEmoji", "§bChoose the emoji you want!", buttons);
+                }).collect(Collectors.toList());
+        FormWindowSimple form = new FormWindowSimple("Emoji", "§bChoose the emoji you want", buttons);
         form.addHandler((player, formID) -> {
-            var response = form.getResponse();
-            if (response == null) return;
-            var emojiId = response.getClickedButton().getText().split("\n")[1];
+            FormResponseSimple response = form.getResponse();
+            if (response == null) {
+                return;
+            }
+            String emojiId = response.getClickedButton().getText().split("\n")[1];
             EmojiAPI.getAPI().sendEmoji(player, emojiId);
         });
-        sender.asPlayer().showFormWindow(form);
+        ((Player) sender).showFormWindow(form);
         return true;
     }
 }
